<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:id="@+id/popup_root">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:orientation="vertical"
        android:background="@drawable/dialog_background"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logotest"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:src="@mipmap/custom_settings"/>

            <TextView
                android:id="@+id/settingtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Blue_Peter_river"
                android:text="Setting\n     Connexion"
                android:textSize="23dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/progress"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="36dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">



            <TextView
                android:layout_height="25dp"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="Adress IP :" />

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginLeft="3dp"
                android:src="@mipmap/ip"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/ip"
                android:hint="@string/hint_ip_adress"
                android:textColor="@color/concrete"
                android:layout_gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_height="25dp"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="Database :" />
            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_marginLeft="5dp"
                android:layout_height="25dp"
                android:src="@mipmap/database_ok"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/database"
                android:hint="@string/hint_databasepath"
                android:textColor="@color/concrete"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_height="25dp"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="Username :" />

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:src="@mipmap/database_user"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/username"
                android:hint="@string/hint_username"
                android:textColor="@color/concrete"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_height="25dp"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="Password :" />
            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginLeft="4dp"
                android:src="@mipmap/computer_network_key"/>

            <EditText
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/hint_password"
                android:textColor="@color/concrete"
                android:layout_gravity="center" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#2ecc71"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Check and Save \n Setting"
                style="@style/dialog_blue_button"
                android:id="@+id/check"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp" />


        </RelativeLayout>
    </LinearLayout>

</FrameLayout>